# MRBN

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
Testnet/: .gitpod.yml  Cargo.toml  Dockerfile  IPV6_SETUP.md  MVP.md  QUICK_RAILWAY_SETUP.md  README.md  SIMPLE_P2P_EXPLAINED.md  build.bat  check_ipv6.bat  codespaces_connect_test.sh  connect_internet.bat  connect_to_bootstrap.bat  connect_to_railway.bat  connect_websocket.bat  dev.bat  gitpod_connect_test.sh  node.bat  railway.toml  run_comprehensive_test.bat  start_bootstrap.bat  start_with_bridge.sh  test.bat  test_as_bootstrap.bat  test_connect_to_codespaces.bat  test_local_p2p.bat  test_local_p2p_node2.bat  test_railway_connection.bat  test_with_relay.bat  wallet.bat
Testnet/data/: lock  log0  log1  log2  log3  log4  log7  log8  metadata  stats.txt  table_00_50  table_03_04  table_03_27
Testnet/data_bootstrap/: log0  log1  log3  metadata  table_00_50  table_03_04  table_03_27
Testnet/data_internet_test/: log0  log2  metadata  table_00_50  table_03_04  table_03_27
Testnet/data_local/: log1  metadata  table_00_50  table_03_04  table_03_27
Testnet/data_node1/: log1  metadata  table_00_50  table_01_00  table_03_04  table_03_27
Testnet/data_node2/: log1  metadata  table_00_50  table_01_0a  table_01_4a  table_03_04  table_03_27
Testnet/data_node3/: log0  metadata
Testnet/data_node4/: log0  metadata
Testnet/data_railway_test/: log0  metadata
Testnet/data_relay_test/: log1  metadata  table_00_50  table_03_04  table_03_27
Testnet/data_test/: log0  log1  log11  log12  log14  log3  log4  log8  log9  metadata  table_00_50  table_03_04  table_03_27
Testnet/src/: lib.rs  main.rs  node.rs  relay_bridge.rs
Testnet/src/cli/: commands.rs  mod.rs
Testnet/src/consensus/: block.rs  committee.rs  engine.rs  mod.rs  validation.rs  vrf.rs
Testnet/src/crypto/: mod.rs
Testnet/src/network/: messages.rs  mod.rs
Testnet/src/storage/: block_store.rs  mod.rs  state_store.rs
Testnet/src/transaction/: mod.rs  pool.rs
Testnet/src/validator/: mod.rs  resources.rs  (+1 more)
Testnet/tests/: comprehensive_test.rs  integration_test.rs
Testnet/wallet/: secret123.json  secret456.json
(+24 files in other folders)
